--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Flexbox </title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>CSS Flexbox</title>
+  </head>
+  <body>
+    <p>Flexbox In CSS</p>
+
+    <div class="container">
+      <div class="box">box-1</div>
+      <div class="box">box-2</div>
+      <div class="box">box-3</div>
+      <div class="box">box-4</div>
+      <div class="box">box-5</div>
+      <div class="box">box-6</div>
+      <div class="box">box-7</div>
+      <div class="box">box-8</div>
+      <div class="box">box-9</div>
+      <div class="box">box-10</div>
+      <div class="box">box-11</div>
+      <div class="box">box-12</div>
+      <div class="box">box-13</div>
+      <div class="box order1" >box-14.order-1</div>
+      <div class="box">box-15</div>
+      <div class="box">box-16</div>
+      <div class="box">box-17</div>
+      <div class="box order2">box-18 <br> order-2</div>
+      <div class="box">box-19</div>
+      <div class="box">box-20</div>
+    </div>
+
+    <div class="boxes">
+        <div class="bat bat-1">1</div>
+        <div class="bat bat-2">2</div>
+        <div class="bat bat-3">3</div>
+        <div class="bat bat-4">4</div>
+        <div class="bat bat-5">5</div>
+    </div>
+  </body>
 </html>
